# mazing

./: .gitignore  LICENSE  README.md  config.py  eval.py  gif.py  pyproject.toml  run.py
backends/: __init__.py  base.py  dummy.py  openai_compat.py
env/: __init__.py  generation.py  oracle.py  state.py  tools.py
metrics/: __init__.py  compute.py
prompts/: policy.md  task.md
runner/: __init__.py  episode.py  render.py
tests/: test_smoke.py
